main/static/main/css/style.css
/* ... */
.sidebar-module .panel ul {
  list-style-type: circle;
  padding-left: 35px;
}

/* program tabs */
.program {
  width: 90%;
}

.program-main-filter {
  float: right;
  text-align: right;
  width: 100%;
  margin-top: -30px;
  margin-bottom: 50px;
}

.program-main-filter i {
  font-size: 14px;
  margin-left: 5px;
}

.program-main-filter-industries {
  margin-top: 30px;
  user-select: none;
}

.program-main-filter-industries-item {
  display: inline-block;
  color: #666;
  padding-left: 10px;
  padding-right: 10px;
  margin-left: 10px;
  margin-right: 10px;
  background: #fff;
  user-select: none;
}

.program-main-filter-industries-item:hover {
  cursor: pointer;
  color: #000;
  text-decoration: underline;
}

.program-main-company {
  margin-bottom: 40px;
}

.program-main-company-name {
  font-weight: 600;
  margin-top: 6px;
  margin-bottom: 3px;
  font-size: 20px;
}

.program-main-company-name a {
  color: #000;
}

.program-main-company-image {
  height: 200px;
}

.program-main-company-image a {
  margin-top: auto;
}

.program-main-company-image img {
  max-width: 100%;
  max-height: 100%;
}

.program-main-company-desc {
  height: 100px;
}

@media (max-width: 767px) {
  .program-sidebar {
    margin-top: 40px;
  }
}

.program-sidebar-meetup {
  padding-right: 20px;
  padding-top: 10px;
  padding-bottom: 15px;
}

.program-sidebar-meetup:hover {
  border-color: #d82c20;
}

.program-sidebar-meetup h4 {
  background: #ee4031;
  color: #fff;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 20px;
  padding-right: 20px;
  display: inline-block;
}

.program-sidebar-meetup h4:hover {
  background: #d82c20;
}

.program-sidebar-meetup a {
  color: #000;
}

.program-sidebar-meetup a:hover {
  text-decoration: none;
}

.program-sidebar-meetup-content {
  color: #333;
}

.program-sidebar-box {
  font-size: 14px;
  background: #f9f9f9;
  padding-top: 17px;
  padding-left: 15px;
  padding-right: 10px;
  padding-bottom: 10px;
  margin-bottom: 25px;
}

label {
  width:80%;
  color: grey;
  margin-top:10px;
  font-weight: 400;
  font-size: 13px;
  margin-bottom: 0px;
  padding-bottom: 0px;
}

textarea {
  margin-top: 0px;
}

.program-sidebar-tabs > ul {
  margin-top: 20px;
}

.program-sidebar-tabs-list > li {
  background-color: #1c599b;
  color: #fff;
  border-bottom: 1px solid #cacaca;
  margin-bottom: 3px;
}

.program-sidebar-tabs-list > li > a:hover {
  background-color: #0f4f92;
}

/*
.program-sidebar-tabs-list > li > a:hover,
.program-sidebar-tabs-list > li > a:focus {
}
*/

/*
.program-sidebar-tabs-list > li.active > a:focus,
.program-sidebar-tabs-list > li.active > a:hover,
.program-sidebar-tabs-list > li.active > a {
  background-color: #231f20;
  color: #fff;
  border-radius: 0px;
  margin-top: 4px;
}*/

.program-sidebar-tabs-elem > a {
  border-radius: 2px;
  color: #fff;
}

.separator {
  height: 1px;
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
}

.program-sidebar-regulation {
  margin-top: 40px;
  text-align: center;
}

.program-sidebar-regulation > h4 > a {
  color: #000;
}

.program-main-mentor {
  text-align: center;
  margin-bottom: 50px;
}

.program-main-mentor-name {
  font-weight: 600;
  text-align: center;
  font-size: 20px;
  margin-top: 10px;
}

.program-main-mentor-image {
  height: 100px;
  border-radius: 10%;
}

.program-sidebar-about,
.program-sidebar-contribute {
  margin-top: 0px;
}

/* meetup */
.meetup {
  width: 90%;
}

.meetup-body {
  padding-left: 60px;
  padding-right: 60px;
}

@media (max-width: 768px) {
  .meetup-body {
    padding-left: 0;
    padding-right: 0;
  }
}

.meetup-body-jumbotron {
  background-image: url(/static/main/img/okthess-meetup.jpg);
  background-size: 1000px;
  background-position: center;
  min-height: 500px;
  text-align: center;
}

.meetup-body-jumbotron > h1 {
  background: #ee4031;
  color: #fff;
  font-size: 48px;
  margin-top: 10%;
}

.meetup-body-jumbotron-subtitle-line {
  background: #fff;
  display: inline-block;
  font-size: 20px;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 10px;
  padding-right: 10px;
}

.meetup-body-content {
  margin-top: 40px;
}

.meetup-body-content-body,
.meetup-body-content-body > p {
  font-size: 18px;
}

.meetup-body-content-body-meta {
  display: flex;
}

.meetup-body-content-body-meta-title {
  display: inline-block;
}

.meetup-body-content-body-meta-info {
  display: inline-block;
  margin-left: auto;
  text-align: right;
}

.meetup-body-content-body-meta-info-date {
  background: #231f20;
  color: #fff;
  padding-left: 10px;
  padding-right: 10px;
}

.meetup-body-content-body-meta-info-time {
  background: #231f20;
  color: #fff;
  margin-top: 8px;
  padding-left: 10px;
  padding-right: 10px;
}

.meetup-body-content-side {
  background: #ee4031;
  color: #fff;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 15px;
  padding-bottom: 20px;
}

.meetup-body-content-side-title > i {
  font-size: 20px;
}

.meetup-body-content-side-title {
  font-size: 22px;
  font-weight: 500;
  margin-bottom: 25px;
}

.meetup-body-content-side-agenda-title {
  font-size: 22px;
  border-bottom: 1px solid #fff;
  padding-bottom: 5px;
}

.meetup-body-content-side-agenda-title > i {
  font-size: 16px;
}

/* contact */
.contact {
  width: 90%;
}

#contact-map-outer {
  border: 2px solid #f9d94f;
  border-radius: 3px;
}

#contact-map-container {
  height: 500px;
}

/* weekends */
.weekends-sidebar {
  position: sticky;
  top: 40px;
}

.weekends-schedule-header {
  background: #d82c20;
  padding: 17px 30px 15px;
  color: #fff;
  font-weight: 500;
}

.weekends-schedule-content-item {
  padding: 12px 30px;
  display: flex;
}

.weekends-schedule-content-item:first-child {
  margin-top: 10px;
}

.weekends-schedule-content-item-time {
  display: flex;
  font-weight: 500;
  width: 15%;
}

.weekends-schedule-content-item-what {
  display: flex;
  width: 20%;
  color: #4a4a4a;
}
/* ... */

